# nimbus

./: .eslintrc.cjs  .gitignore  .prettierrc  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HISTORY_PHASE1_STEP1.md  HISTORY_PHASE1_STEP2.md  HISTORY_PHASE1_STEP3.md  HISTORY_PHASE1_STEP4.md  HISTORY_PHASE1_STEP5.md  HISTORY_PHASE1_STEP6.md  HISTORY_REMOTE_FS_STEP1_SFTP.md  HISTORY_REMOTE_FS_STEP2_FTP.md  HISTORY_REMOTE_FS_STEP3_WEBDAV.md  HISTORY_REMOTE_FS_STEP4_INTERFACE.md  HISTORY_REMOTE_FS_STEP5_UI.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  README.md  TEST_DRAG_DROP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: README.md
docs/api/: search-components.md  tauri-commands.md
docs/development/: DEVELOPMENT_WORKFLOW.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md  getting-started.md  plugin-quick-reference.md  plugin-sdk-guide.md  search-quick-reference.md
docs/features/: archives.md  core-features.md  dual-pane.md  multi-panel.md  search-system.md  search.md
docs/plan/: prd.md  v1-acceptance.md
docs/project/: PHASE_8_STATUS_REPORT.md  architecture.md  overview.md  roadmap.md  technology-stack.md
docs/user/: quick-start.md
examples/content-plugin/: Cargo.toml  plugin.json
examples/content-plugin/src/: lib.rs
examples/protocol-plugin/: Cargo.toml  plugin.json
examples/protocol-plugin/src/: lib.rs
examples/viewer-plugin/: Cargo.toml  plugin.json
examples/viewer-plugin/src/: lib.rs
src/: App.css  App.tsx  explorer.rs  filesystem.rs  git.rs  index.css  index.html  main.js  main.rs  model.rs  operation.rs  persistence.rs  preview.rs  styles.css  windows_integration.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/archive/: Cargo.toml
src-tauri/crates/archive/src/: lib.rs
src-tauri/crates/core-engine/: Cargo.toml
src-tauri/crates/core-engine/src/: lib.rs  local_fs.rs  performance.rs  tests.rs  watcher.rs
src-tauri/crates/file-viewers/: Cargo.toml
src-tauri/crates/file-viewers/src/: binary.rs  image.rs  lib.rs  text.rs
src-tauri/crates/plugin-sdk/: Cargo.toml
src-tauri/crates/plugin-sdk/src/: content.rs  error.rs  lib.rs  manager.rs  protocol.rs  types.rs  viewer.rs
src-tauri/crates/remote-fs/: Cargo.toml
src-tauri/crates/remote-fs/src/: credentials.rs  ftp.rs  lib.rs  sftp.rs  webdav.rs
src-tauri/crates/search-engine/: Cargo.toml
src-tauri/crates/search-engine/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archives.rs  files.rs  mod.rs  search.rs  system.rs  tests.rs  viewers.rs  watcher.rs
src/components/Toolbar/: LayoutToolbar.css  LayoutToolbar.tsx
src/components/common/: AddressBar.css  AddressBar.tsx  ArchiveBrowser.css  ArchiveBrowser.tsx  CommandPalette.css  CommandPalette.tsx  ConfirmDialog.css  ConfirmDialog.tsx  ConnectionManager.css  ConnectionManager.tsx  ContextMenu.css  ContextMenu.tsx  EnhancedProgressIndicator.css  EnhancedProgressIndicator.tsx  ErrorNotification.css  ErrorNotification.tsx  FileIcon.css  FileIcon.tsx  NotificationContainer.css  NotificationContainer.tsx  ProgressContainer.css  ProgressContainer.tsx  ProgressIndicator.css  ProgressIndicator.tsx  PromptDialog.css  PromptDialog.tsx  Tooltip.css  Tooltip.tsx
src/components/layout/: MultiPanelLayout.css  MultiPanelLayout.tsx
src/components/layout/__tests__/: MultiPanelLayout.test.tsx
src/components/panels/: FilePanel.css  FilePanel.tsx  SearchPanel.css  SearchPanel.tsx
src/components/panels/__tests__/: FilePanel.test.tsx
src/components/plugins/: PluginCard.css  PluginCard.tsx  PluginFilters.css  PluginFilters.tsx  PluginList.css  PluginList.tsx  PluginManager.css  PluginManager.tsx
src/components/search/: SavedSearches.tsx  SearchAnimations.css  SearchComponents.css  SearchHistory.tsx  SearchInterface.tsx  SearchPagination.tsx  SearchPanel.tsx  SearchResults.tsx  SearchResultsToggle.tsx  VirtualizedSearchResults.tsx  index.ts
src/components/search/__tests__/: SearchInterface.test.tsx  SearchSystem.integration.test.tsx  VirtualizedSearchResults.performance.test.tsx
src/hooks/: useCommands.ts  useKeyboardNavigation.ts  usePlugins.ts  useSearch.ts  useSearchResultContext.ts
src/hooks/__tests__/: useCommands.test.tsx
src/providers/: CommandProvider.tsx
src/services/: commandExecutor.ts  commandRegistry.ts  fileService.ts  pathAliasService.ts  pluginService.ts  searchService.ts
src/services/__tests__/: commandExecutor.test.ts
src/services/commands/: CommandSystem.ts  README.md  index.ts  types.ts
src/services/commands/__tests__/: BaseCommand.test.ts  CommandFactory.test.ts  CommandSystem.test.ts  DialogService.test.ts  FileCommands.test.ts  ModernCommandSystem.test.ts
src/services/commands/base/: BaseCommand.ts  FileOperationCommand.ts  NavigationCommand.ts  index.ts
src/services/commands/factory/: CommandFactory.ts
src/services/commands/implementations/file/: CopyFilesCommand.ts  CreateFileCommand.ts  CreateFolderCommand.ts  CutFilesCommand.ts  DeleteFilesCommand.ts  DragDropCommands.ts  LoadDirectoryCommand.ts  PasteFilesCommand.ts  RenameFileCommand.ts  index.ts
src/services/commands/implementations/navigation/: FocusAddressBarCommand.ts  GoToApplicationsCommand.ts  GoToDesktopCommand.ts  GoToDocumentsCommand.ts  GoToDownloadsCommand.ts  GoToHomeCommand.ts  GoToPathCommand.ts  index.ts
src/services/commands/implementations/panel/: SetGridLayoutCommand.ts  index.ts  (+1 more)
src/services/commands/ipc/: file.ts
src/services/commands/registry/: CommandRegistry.ts
src/services/commands/services/: CommandExecutorService.ts  CommandService.ts  DialogService.ts
src/store/: index.ts
src/store/slices/: panelSlice.ts  pluginSlice.ts  searchSlice.ts
src/test/: setup.ts  testUtils.tsx
src/test/integration/: commandFlow.test.tsx
src/test/mocks/: fileService.ts
src/test/utils/: testUtils.tsx
src/types/: commands.ts  index.ts  plugins.ts
src/utils/: fileIcons.ts  searchHighlight.tsx  searchStorage.ts
src/utils/__tests__/: searchHighlight.test.tsx
(+7 files in other folders)
