[package]
name = "nimbus"
version = "0.1.0"
description = "A modern, cross-platform file manager"
authors = ["Nimbus Team"]
repository = "https://github.com/seobaeksol/nimbus"
license = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.8", features = [] }
tauri-plugin-shell = "2.3"

# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
notify = "8.2"
walkdir = "2.5"
jwalk = "0.8"

# Path manipulation
path-clean = "1.0"
dunce = "1.0"

# Archive support
zip = { version = "4.5", features = ["deflate", "bzip2"] }
tar = "0.4"
flate2 = "1.1"

# Utility
uuid = { version = "1.18", features = ["v4"] }
thiserror = "2.0"
anyhow = "1.0"
hostname = "0.4"
whoami = "1.6"
dirs = "6.0"

# Local crates
core-engine = { path = "crates/core-engine" }
nimbus-archive = { path = "crates/archive" }
nimbus-remote-fs = { path = "crates/remote-fs" }
nimbus-search = { path = "crates/search-engine" }
nimbus-plugin-sdk = { path = "crates/plugin-sdk" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
