[package]
name = "nimbus-media-info-plugin"
version = "1.0.0"
edition = "2021"
description = "Content plugin that extracts media file metadata (images, audio, video)"
authors = ["Nimbus Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nimbus-plugin-sdk = { path = "../../src-tauri/crates/plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

# Media processing dependencies
image = "0.24"
mp3-metadata = "0.3"
exif = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[package.metadata.plugin]
name = "Media Info Plugin"
version = "1.0.0"
description = "Extracts metadata from image, audio, and video files"
author = "Nimbus Team"
plugin_type = "Content"
tags = ["media", "metadata", "exif", "id3"]