[package]
name = "nimbus-webdav-plugin"
version = "1.0.0"
edition = "2021"
description = "WebDAV protocol plugin for accessing WebDAV servers and cloud storage"
authors = ["Nimbus Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nimbus-plugin-sdk = { path = "../../src-tauri/crates/plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

# WebDAV and HTTP dependencies
reqwest = { version = "0.11", features = ["json", "stream"] }
url = "2.0"
xml-rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
wiremock = "0.5"

[package.metadata.plugin]
name = "WebDAV Plugin"
version = "1.0.0"
description = "WebDAV protocol support for cloud storage and remote servers"
author = "Nimbus Team"
plugin_type = "Protocol"
tags = ["webdav", "protocol", "cloud", "remote"]