[package]
name = "nimbus-markdown-viewer-plugin"
version = "1.0.0"
edition = "2021"
description = "Markdown viewer and editor plugin with syntax highlighting and live preview"
authors = ["Nimbus Team"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
nimbus-plugin-sdk = { path = "../../src-tauri/crates/plugin-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"

# Markdown processing dependencies
pulldown-cmark = { version = "0.9", features = ["html"] }
regex = "1.0"
syntect = { version = "5.0", features = ["default-themes", "default-syntaxes", "html"] }
html-escape = "0.2"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[package.metadata.plugin]
name = "Markdown Viewer Plugin"
version = "1.0.0"
description = "Advanced Markdown viewer with syntax highlighting and live preview"
author = "Nimbus Team"
plugin_type = "Viewer"
tags = ["markdown", "viewer", "editor", "syntax", "preview"]