[package]
name = "nimbus-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# ZIP support (existing)
zip = { version = "2.1", features = ["deflate", "bzip2"] }

# TAR support
tar = "0.4"
flate2 = "1.0"  # For gzip compression
bzip2 = "0.4"   # For bzip2 compression

# 7z support
sevenz-rust = "0.5"

# RAR support (read-only)
unrar = "0.5"

[dev-dependencies]
tempfile = "3.14"