[package]
name = "core-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["fs", "io-util"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File system utilities
dunce = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# File system watching
notify = { version = "6.1", features = ["macos_fsevent"] }

# Performance optimization
dashmap = "6.1"

# Testing utilities
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.14"